--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f8f9fa;
   transition: background-color 0.3s ease;
 }
 
@@ -12,49 +13,18 @@ body {
 }
 
 .App.dark {
-  background-color: #333;
+  background-color: #343a40;
   color: #fff;
 }
 
-.App h1 {
-  font-size: 3rem; /* Adjusted size for better responsiveness */
-  margin-bottom: 20px;
-}
-
-.App input[type='file'] {
-  margin-bottom: 20px;
-}
-
-.App img {
-  margin-bottom: 20px;
-  max-width: 100%; /* Ensure images are responsive */
-  max-height: 250px; /* Adjusted max height to fit in the container */
-  object-fit: cover; /* Cover the container area while maintaining aspect ratio */
-}
-
-.App h2 {
-  font-size: 2.5rem; /* Adjusted size for better responsiveness */
-  margin-bottom: 10px;
-}
-
-.App h3 {
-  font-size: 1.5rem; /* Adjusted size for better responsiveness */
-  margin-bottom: 10px;
-}
-
-/* Position the toggle-container in the upper right corner */
 .toggle-container {
-  position: fixed; /* Ensure it stays fixed while scrolling */
+  position: fixed;
   top: 10px;
   right: 10px;
+  z-index: 1000;
   display: flex;
   align-items: center;
-  background-color: transparent; /* Transparent background */
-  z-index: 1000;
-}
-
-.toggle-container span {
-  margin-right: 10px;
+  background-color: transparent;
 }
 
 .switch {
@@ -62,6 +32,7 @@ body {
   display: inline-block;
   width: 60px;
   height: 34px;
+  margin-left: 10px;
 }
 
 .switch input {
@@ -95,17 +66,9 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #007bff; /* Use Bootstrap's primary color */
+  background-color: #007bff;
 }
 
 input:checked + .slider:before {
-  transform: translateX(16px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+  transform: translateX(26px);
 }
